# kite-string

./: .gitignore  README.md  kite.sql  pyproject.toml  requirements.txt  run.py  scrapy.cfg  test.py
.github/workflows/: codeql-analysis.yml
kite/: __init__.py  aes.py  auth.py  dupfilters.py  items.py  middlewares.py  pipelines.py  settings.py  settings.toml.example
kite/dupefilters/: __init__.py  library.py  page.py
kite/pipelines/: __init__.py  attachment.py  book.py  caching.py  notice.py  page.py
kite/spiders/: __init__.py  download_public_pages.py  library.py  private.py  public.py
sitProject/: items.py  middlewares.py  pipelines.py  run.py  settings.py
sitProject/spiders/: download_public_pages.py  sit_edu.py
tools/: document-parser.py  requirements.txt  update-content.py  update_content.py
