[project]
name = "kite-string"
version = "0.1.0"
description = "Scrapy-based campus site crawler"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp",
    "botocore",
    "chardet<6",
    "lxml",
    "psycopg==3.3.3",
    "python-dotenv",
    "pybloom-live",
    "pycryptodome",
    "readability-lxml",
    "regex",
    "requests",
    "scrapy",
]

[project.optional-dependencies]
tools = [
    "pdfminer3k",
    "wand",
]

[dependency-groups]
dev = [
    "ruff",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
